TODO
* move split functions to libcsplit ?
* improve sanitize path/filename
  - update m4 script
  - update man page
  - add tests
* add libcpath_codepage.h and codepage functions
* complete full path functions
  - implement libbfio_path_get_full_path_wide
  - POSIX: add support for absolute paths with x/../y
* update include header
* update man page
* add tests
  - wide character path functions
  - windows functions

20140506
* fixes to build static library with mingw and cygwin

20140105
* 2014 update
* updated dependencies

20130809
* updated dependencies

20130609
* fix in .pc.in file

20130509
* removed CRT functions
* updated dependencies

20130413
* updated dependencies

20130404
* textual changes
* updated dependencies

20130327
* small updates

20130113
* updated msvscpp files

20130103
* 2013 update

20121225
* added .gitignore
* added msvscpp files

20121018
* bug fix in error handling of current working directory

20120919
* updated dependencies

20120904
* updated dependencies

20120630
* fix for missing PATH_MAX in older versions of OSX

20120601
* worked on sanitize path and filename functions

20120507
* email and project site change

20120425
* fixes for pkg-config detection of libraries

20120409
* updated dependencies

20120408
* updated dependencies

20120407
* updated dependencies

20120406
* added error functions

20120405
* Worked on include header

20120403
* Worked on stand-alone version
