@@ -2,7 +2,7 @@ AC_PREREQ( 2.59 )
 
 AC_INIT(
  [libcpath],
- [20140506],
+ [20140624],
  [joachim.metz@gmail.com])
 
 AC_CONFIG_SRCDIR(
@@ -72,6 +72,16 @@ AX_LIBUNA_CHECK_ENABLE
 
 dnl Check for library function support
 AX_LIBCPATH_CHECK_LOCAL
+
+dnl Headers included in various places
+AC_CHECK_HEADERS([stdarg.h varargs.h])
+
+AS_IF(
+ [test "x$ac_cv_header_stdarg_h" != xyes && test "x$ac_cv_header_varargs_h" != xyes],
+ [AC_MSG_FAILURE(
+  [Missing headers: stdarg.h and varargs.h],
+  [1])
+ ])
 
 dnl Check if DLL support is needed
 AS_IF(
