@@ -1,0 +1,41 @@
+[Project]
+name: "libcpath"
+status: "alpha"
+features: [
+    "debug_output",
+    "git", "source_package",
+    "cygwin", "gcc", "mingw", "msvscpp",
+    "dpkg", "rpm"]
+
+[source_package]
+url: "https://googledrive.com/host/0B3fBvzttpiiSOGFVQUwtOHlEWjQ/"
+
+[git]
+url: "https://code.google.com/p/libcpath/"
+
+[cygwin]
+build_dependencies: []
+dll_dependencies: [
+    "*TODO describe dependencies*"]
+dll_filename: "cygcpath-0.dll"
+
+[gcc]
+build_dependencies: []
+static_build_dependencies: []
+
+[mingw]
+build_dependencies: []
+dll_dependencies: [
+    "*TODO describe dependencies*"]
+dll_filename: "libcpath-1.dll"
+
+[msvscpp]
+build_dependencies: []
+dll_dependencies: []
+
+[dpkg]
+build_dependencies: []
+
+[rpm]
+build_dependencies: []
+
